# koifish

./: .gitignore  .gitpod.yml  404.html  CNAME  Cargo.toml  FAQ.html  LICENSE  LICENSE.html  README.md  faq.html  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: cargo_fmt.yml  cargo_publish.yml  cargo_test.yml  github_release.yml  mdbook.yml  mdbook_build.yml  mdbook_deploy.yml  release_build.yml  rust_build.yml  rust_publish.yml  rust_release.yml
commands/: index.html
contributing/: CODE_OF_CONDUCT.html  cla.html  code.html  document.html  index.html
contribution/: CLA.html  CODE_OF_CONDUCT.html  DOCS.html  code.html  codes.html  docs.html  index.html
docs/: book.toml
docs/src/: FAQ.md  LICENSE  SUMMARY.md  index.md
docs/src/commands/: index.md
docs/src/contribution/: CLA.md  code.md  codes.md  docs.md  index.md
docs/src/getting-started/: how_to_use.md  index.md  installation.md
docs/src/roadmap/: index.md
getting-started/: how_to_use.html  index.html  installation.html
guide/: index.html
pages/: gooel.md  ps.md  rust.md
reference/: index.html
roadmap/: index.html
src/: app.rs  cli.rs  config.rs  logger.rs  main.rs  tui.rs
src/handler/: cli.rs  join.rs  mod.rs  oauth.rs
src/model/: conf.rs  mod.rs  oauth.rs  release.rs
src/static/: index.html
src/utils/: config_util.rs  counter.rs  mod.rs  network.rs
src/widgets/: cli.rs  details.rs  home.rs  mod.rs  search.rs
